Apply Linux-specific fixes
This CL applies the necessary fixes to get cperfetto (and the static
version cperfetto_static) to build under Linux. It patches a few clang
errors and windows-specific code (__declspec).

To compile this code:

 - `python3 ./tools/install-build-deps`
 - `gn gen --args='is_debug=true' out/debug`
 - `ninja -C out/debug cperfetto` or `ninja -C out/debug
   cperfetto_static`

BUG=b:277837670
TEST=compiled cperfetto_static and verified libperfetto_static.a exists

Change-Id: I7a804fbd5f20c685d78bce030136b1abe3e5df02
Reviewed-on: https://chromium-review.googlesource.com/c/crosvm/perfetto/+/4669640
Reviewed-by: Colin Downs-Razouk <colindr@google.com>
Auto-Submit: Morg <morg@google.com>
Reviewed-by: Noah Gold <nkgold@google.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -253,6 +253,15 @@ shared_library("cperfetto") {
   sources = [ "include/perfetto/tracing/ctrace.h", "src/tracing/ctrace.cc" ]
 }
 
+static_library("cperfetto_static") {
+  deps = [
+    "gn:default_deps",
+    "src/tracing:client_api",
+    "src/tracing:platform_impl"
+  ]
+  sources = [ "include/perfetto/tracing/ctrace.h", "src/tracing/ctrace.cc" ]
+}
+
 if (!build_with_chromium) {
   # Client library target exposed to the Android tree.
   # Still in experimental stage and not API stable yet.
